--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "publish": true
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.2.0",
+    "history": "^5.3.0",
     "nanoid": "5.1.5",
     "partyserver": "0.0.66",
     "partysocket": "1.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router": "7.6.3"
+    "react-router": "7.6.3",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
