--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chat",
-  "description": "Chat with other users in real-time using Durable Objects and PartyKit.",
+  "description": "使用 Durable Objects 和 PartyKit 构建的实时聊天应用",
   "cloudflare": {
-    "label": "Durable Chat App",
+    "label": "实时聊天应用",
     "products": [
       "Workers",
       "Durable Objects"
@@ -17,6 +17,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "history": "^5.3.0",
     "nanoid": "5.1.5",
